--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.1",
     "@reduxjs/toolkit": "^1.5.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "next": "10.2.2",
