--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "next": "10.2.2",
     "react": "17.0.2",
+    "react-currency-formatter": "^1.1.0",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
     "react-responsive-carousel": "^3.2.18"
