--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@heroicons/react": "^1.0.1",
     "@reduxjs/toolkit": "^1.5.1",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "firebase": "^8.6.2",
     "next": "10.2.2",
+    "next-auth": "^3.23.3",
     "react": "17.0.2",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "17.0.2",
