--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/line-clamp": "^0.2.0",
     "axios": "^0.21.1",
     "firebase": "^8.6.2",
+    "firebase-admin": "^9.8.0",
+    "micro": "^9.3.4",
     "next": "10.2.2",
     "next-auth": "^3.23.3",
     "react": "17.0.2",
