--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^8.6.2",
     "firebase-admin": "^9.8.0",
     "micro": "^9.3.4",
+    "moment": "^2.29.1",
     "next": "10.2.2",
     "next-auth": "^3.23.3",
     "react": "17.0.2",
